--- a/conclusion.adoc
+++ b/conclusion.adoc
@@ -6,18 +6,7 @@ endif::[]
 
 Cette première expérimentation (première année d'examen du nouveau référentiel SIO) a permi de mesurer la difficulté à enseigner les principes de cybersécurité à des débutants en programmation. Les propositions d'étudiants présentées ici ont, en partie, été reformulées, mais restent relativement fidèles à leur version originale. 
 
-Seule la proposition de la team _Tournesol_ n'est pas une proposition d'étudiant. Malgré le fait que le cas _Optical Center_ ait été vu en cours, au même titre, mais plus fin, que la faiblesse du code généré par le module _maker_ d'authentification (Evil User Story n°9, gestion des données du profil utilisateur contrôlée uniquement sur le rôle de l'utilisateur). Nous pensons que cette proposition n'a pas été retenue par les étudiants de par sa relative complexité, qui nécessite un recul basé sur une expérience en devenir. 
-
-La cybersécurité en développement logiciel (défense) nécessite un esprit d'analyse fort qui s'appuie essentiellement sur une connaissance fine des technologies mises en oeuvre (infrastructures, protocoles, architectures des tiers, architectures en couches...). Cette connaissance se forge par l'expérience. 
-
-Enseigner la cybersécurité à BAC+2, à des débutants, c'est accompagner l'étudiant sur le chemin de l'expérience et en même temps l'éclairer à la fois sur les bonnes pratiques et les usages déviants.
-
-Seulement, l'étudiant a tendance à se focaliser principalement sur la consolidation de connaissances informatiques nouvelles (comprendre la technologie, mettre au point l'application) laissant malheureusement peu de place à l'étude de bonnes pratiques et des usages mal intentionnés. Normal, car ces études ont comme prérequis une bonne dose d'expérience...
-
-
-
-.Expérience 
-image::etudiant-apprentissage.jpg[caption="",title="l'expérience prime",alt="expérience prime"]
+Seule la proposition de la team _Tournesol_ n'est pas une proposition d'étudiant (Evil User Story n°9, gestion des données du profil utilisateur contrôlée uniquement sur le rôle de l'utilisateur). Malgré le fait que le cas _Optical Center_ ait été évoqué en cours, la faiblesse du code généré par le module _maker_ d'authentification dans sa version d'octobre 2019 n'a pas fait objet d'une contre-mesure. Nous pensons que cette proposition n'a pas été retenue par les étudiants de par sa relative complexité, qui nécessite un recul basé sur une expérience en devenir. 
 
 === Qualité de l'expérience
 
@@ -35,9 +24,3 @@ En tant que professeur, nous devrions orienter nos évaluations sur ces points.
 --
 L'ANSII préconise d'intégrer les risques cyber dès le début d'un projet. La recherche, par l'étudiant, de scénarios d'usages malveillants et de contre-mesures force à un recul sur sa pratique. Cela parait être une excellente façon d'introduire une culture générale et un esprit de veille sur ce sujet. 
 --
-
-
-.Un constat
-CAUTION: L'étude des risques cyber, tout comme celle des tests unitaires, est *discriminante* dans la mesure où elle induit un travail et un recul sur un réel construit et opérationnel (l'application). Elle creuse ainsi le fossé entre les étudiants acteurs de leur formation et ceux qui la subissent (1/3 des étudiants n'ont pas été en mesure de produire, dans les temps imposés, de scénarios d'utilisateurs malveillants, en cette année covid 2021-2022). L'accès à ce type de formation est ainsi clairement monté en exigence, et va dans le sens des attendus de professionnels du secteur. (https://www.lemonde.fr/blog/binaire/2015/11/05/la-culture-de-la-cybersecurite/)
-
-
