--- a/preface.adoc
+++ b/preface.adoc
@@ -1,14 +1,37 @@
+ifndef::imagesdir[]
+:imagesdir: images
+endif::[]
+
 [preface]
 == Preface
 
 Ce document présente un retour d'expérience d'une introduction à la cybersécurité, d'après le bloc 3 du référentiel du BTS SIO SLAM.
 
-Dans le cadre de leur formation (premier 1/2 semestre), les étudiants ont eu la charge de réaliser une application web, en mode projet. Outre le fait que leur projet devait être livré à une date donnée (sur un dépôt git distant de leur choix) sous la forme d'un rapport détaillé (README du projet), nous attendions qu'il intègre des scénarios d'actions mal intentionnées et la mise en oeuvre de mesures de défense.
+Dans le cadre de leur formation (troisième semestre), les étudiants ont eu la charge de réaliser une application web, en mode projet. Outre le fait que leur projet devait être livré à une date donnée (sur un dépôt git distant de leur choix), associé à un rapport détaillé (README du projet), nous attendions qu'il intègre des scénarios d'actions mal intentionnées et la mise en oeuvre de contre mesures de défense.
 
 Les exemples de Evil User Stories (<<EvilUS>>) présentés ici, sont tirés de travaux de ces étudiants (deuxième année du BTS SLAM, lycée Léonard de Vinci de Melun,  2021-2022). Ces exemples sont donc centrés sur des problèmes liés aux cas d'utilisation métier de ce projet.
 
-Lien vers le projet : https://ocapuozzo.github.io/mission-etl-csv/  (libre utilisation)
+Pour ceux qui souhaitent reconduire cette expérience très exactement, voici le lien vers le projet : https://ocapuozzo.github.io/mission-etl-csv/  (libre utilisation). Compter minimum 3 semaines de travail étudiant, couvrant toutes les plages de TP info, plus un temps certain de travail à domicile (première semaine des vacances de Toussaint, par exemple)
 
-Compter minimum 3 semaines de travail, couvrant toutes les plages de TP info, plus un temps certain de travail à domicile.
+
+== Résumé
+
+
+La cybersécurité en développement logiciel (défense) nécessite un esprit d'analyse certain qui s'appuie en partie sur une connaissance fine des technologies mises en oeuvre (infrastructures, protocoles, architectures des tiers, architectures en couches...). Cette connaissance se forge par l'expérience. 
+
+Enseigner la cybersécurité à BAC+2, à des débutants, c'est accompagner l'étudiant sur le chemin de l'expérience et en même temps l'éclairer à la fois sur les bonnes pratiques et les usages déviants.
+
+Pour autant, l'étudiant a tendance à se focaliser principalement sur la consolidation de connaissances informatiques nouvelles (comprendre la technologie, mettre au point l'application) laissant malheureusement peu de place à l'étude de bonnes pratiques et des usages mal intentionnés. Normal, car ces études ont comme prérequis une bonne dose d'expérience...
+
+.Expérience 
+image::etudiant-apprentissage.jpg[caption="",title="l'expérience prime",alt="expérience prime"]
+
+
+.Un constat
+L'étude des risques cyber, tout comme celle des tests unitaires, est *discriminante* dans la mesure où elle induit un travail et un recul sur un réel construit et opérationnel (l'application). Elle creuse ainsi le fossé entre les étudiants acteurs de leur formation et ceux qui la subissent (1/3 des étudiants n'ont pas été en mesure de produire, dans les temps imposés, de scénarios d'utilisateurs malveillants, en cette année covid 2021-2022). 
+
+L'accès à ce type de formation est ainsi clairement monté en exigence, et va dans le sens des attendus de professionnels du secteur. (https://www.lemonde.fr/blog/binaire/2015/11/05/la-culture-de-la-cybersecurite/). 
+
+À nous, enseignants, de relever le défi de sensibiliser l'ensemble de nos étudiants aux risques liés à la cybersécurité, et aux actions pour en minimiser l'impact.
 
 
