--- a/conclusion.adoc
+++ b/conclusion.adoc
@@ -6,7 +6,7 @@ endif::[]
 
 Cette première expérimentation (première année d'examen du nouveau référentiel SIO) a permi de mesurer la difficulté à enseigner les principes de cybersécurité à des débutants en programmation. Les propositions d'étudiants présentées ici ont, en partie, été reformulées, mais restent relativement fidèles à leur version originale. 
 
-Seule la proposition de la team _Tournesol_ n'est pas une proposition d'étudiant (Evil User Story n°9, gestion des données du profil utilisateur contrôlée uniquement sur le rôle de l'utilisateur). Malgré le fait que le cas _Optical Center_ ait été évoqué en cours, la faiblesse du code généré par le module _maker_ d'authentification dans sa version d'octobre 2019 n'a pas fait objet d'une contre-mesure. Nous pensons que cette proposition n'a pas été retenue par les étudiants de par sa relative complexité, qui nécessite un recul basé sur une expérience en devenir. 
+Seule la proposition de la team _Tournesol_ n'est pas une proposition d'étudiant (Evil User Story n°9, gestion des données du profil utilisateur contrôlée uniquement sur le rôle de l'utilisateur). Malgré le fait que le cas _Optical Center_ ait été évoqué en cours, la faiblesse du code généré par le module _maker_ d'authentification dans sa version d'octobre 2021 n'a pas fait objet d'une contre-mesure. Nous pensons que cette proposition n'a pas été retenue par les étudiants de par sa relative complexité, qui nécessite un temps de recul basé sur une expérience en devenir. 
 
 === Qualité de l'expérience
 
@@ -14,13 +14,9 @@ Il existe dela part de l'étudiant une tendance certaine à rechercher systémat
 
 NOTE: Par exemple le projet demande une fusion sélective très particulière de deux fichiers CSV, et quelques étudiants ne se sont pas contentés d'un exemple de code de lecture/écriture d'un tel fichier, cherchant de longues heures une solution de fusion clé en main sur le net...
 
-Dans la même veine, suivre un tutoriel n'est pas de l'expérience, mais aller au delà, c'est à dire *comprendre ce qui a été réalisé*, l'*adapter à un projet*, l'*étendre* sur la base d'une *idée d'amélioration* ou la *création d'une nouvelle fonctionnalité*, oui. L'expérience forge la créativité.
+Dans la même veine, suivre un tutoriel n'est pas de l'expérience, mais aller au delà, c'est à dire *comprendre ce qui a été réalisé*, l'*adapter à un projet*, l'*étendre* sur la base d'une *idée d'amélioration* ou *créer de nouvelles fonctionnalités*, oui. L'expérience forge la créativité et inversement.
 
-En tant que professeur, nous devrions orienter nos évaluations sur ces points.
+En tant que professeur, nous devrions orienter nos évaluations sur ces points, en favorisant la créativité, essentielle en cybersécurité.
 
 
-[sidebar]
-.Conclusion
---
-L'ANSII préconise d'intégrer les risques cyber dès le début d'un projet. La recherche, par l'étudiant, de scénarios d'usages malveillants et de contre-mesures force à un recul sur sa pratique. Cela parait être une excellente façon d'introduire une culture générale et un esprit de veille sur ce sujet. 
---
+<<resume>>
