--- a/conclusion.adoc
+++ b/conclusion.adoc
@@ -18,7 +18,8 @@ Dans la même veine, suivre un tutoriel n'est pas de l'expérience, mais aller a
 
 La recheche par l'étudiant de scénarios d'usages déviants, et leur contre-mesure, participe au développement de sa créativité. C'est une dimension que nous, professeurs, avons décidé de prendre en compte dans les évaluations. 
 
-Enfin, il est utile de signaler qu'un tiers environ de nos étudiants n'ont pas été en mesure de réaliser le travail demandé. Leur capacité à transposer des savoir faire, leur niveau d'implication, n'ont pas été suffisants pour atteindre les objectifs fixés.
+Enfin, signalons qu'un tiers environ de nos étudiants n'a pas été en mesure de réaliser le travail demandé. Leur capacité à transposer des savoir faire, leur niveau d'implication, n'ont pas été suffisants pour atteindre les objectifs fixés.
 
+Test
 
 <<resume>>
